--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -8,36 +8,58 @@
     @if (error) {
       <div class="error-message">{{ error }}</div>
     }
-    <form (ngSubmit)="onSubmit($event)">
-      <div class="input-group">
-        <input
-          type="text"
-          id="identifier"
-          name="identifier"
-          placeholder="Введіть нікнейм або email"
-          [(ngModel)]="user.identifier"
-          required
-        />
-      </div>
-      <div class="input-group">
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Введіть пароль"
-          [(ngModel)]="user.password"
-          required
-        />
-        <img
-          src="assets/icons/eye-closed.svg"
-          class="toggle-password"
-          (click)="togglePassword('password', $event)"
-        />
-      </div>
-      <button type="submit">Увійти</button>
-    </form>
-    <p>
-      Ще не маєте акаунту? <a href="/register">Зареєструйтесь</a>
-    </p>
+    @if (!showForgotPassword) {
+      <form (ngSubmit)="onSubmit($event)">
+        <div class="input-group">
+          <input
+            type="text"
+            id="identifier"
+            name="identifier"
+            placeholder="Введіть нікнейм або email"
+            [(ngModel)]="user.identifier"
+            required
+          />
+        </div>
+        <div class="input-group">
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Введіть пароль"
+            [(ngModel)]="user.password"
+            required
+          />
+          <img
+            src="assets/icons/eye-closed.svg"
+            class="toggle-password"
+            (click)="togglePassword('password', $event)"
+          />
+        </div>
+        <button type="submit">Увійти</button>
+      </form>
+      <p>
+        Забули пароль? <a href="#" (click)="showForgotPasswordForm($event)">Відновити</a>
+      </p>
+      <p>
+        Ще не маєте акаунту? <a href="/register">Зареєструйтесь</a>
+      </p>
+    } @else {
+      <form (ngSubmit)="onForgotPasswordSubmit($event)">
+        <div class="input-group">
+          <input
+            type="email"
+            id="forgot-email"
+            name="forgot-email"
+            placeholder="Введіть ваш email"
+            [(ngModel)]="forgotPasswordEmail"
+            required
+          />
+        </div>
+        <button type="submit">Надіслати</button>
+        <p>
+          <a href="#" (click)="showForgotPasswordForm($event)">Повернутися до входу</a>
+        </p>
+      </form>
+    }
   </div>
 </div>
