--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -4,8 +4,8 @@
     <p>
       Наша платформа створена для тих, хто захоплюється макраме та рукоділлям. 
       Вона дозволяє легко створювати ескізи й схеми будь-якої складності, а 
-      також автоматично перетворювати фото на готові шаблони. Ви можете зберігати, 
-      ділитися своїми проєктами та спілкуватися в спільноті. З нашим застосунком 
+      також автоматично перетворювати фото на готові шаблони. Ви можете також зберігати, 
+      своїм проєкти у зручному для вас форматі. З нашим застосунком 
       творчість стає ще доступнішою!
     </p>
   </section>
