Fix pixelation issues and improve undo functionality

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
       Наша платформа створена для тих, хто захоплюється макраме та рукоділлям. 
       Вона дозволяє легко створювати ескізи й схеми будь-якої складності, а 
       також автоматично перетворювати фото на готові шаблони. Ви можете також зберігати, 
-      своїм проєкти у зручному для вас форматі. З нашим застосунком 
+      свої проєкти у зручному для вас форматі. З нашим застосунком 
       творчість стає ще доступнішою!
     </p>
   </section>
